--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -1,19 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>{ifset title}{include title|stripHtml} | {/ifset}Nette Web</title>
+    <title>{ifset title}{include title|stripHtml} | {/ifset}Images Gallery</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
 </head>
 
 <body>
-	<div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <a class="navbar-item" n:href=":Front:Homepage:default">
+        </a>
 
-	{include content}
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
+    </div>
+
+    <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+            <a n:href=":Front:Homepage:default" class="navbar-item">
+                Home
+            </a>
+        </div>
+
+        {if $user->isLoggedIn()}
+            <div class="navbar-end">
+                <div class="navbar-item">
+                    <span>Hello, {$user->id}!</span>
+                </div>
+                <div class="navbar-item">
+                    <div class="buttons">
+                        <a n:href="Sign:out" class="button is-light">
+                            Logout
+                        </a>
+                    </div>
+                </div>
+            </div>
+        {/if}
+    </div>
+</nav>
+
+<div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
+
+{include content}
 
 	{block scripts}
-	<script src="https://nette.github.io/resources/js/3/netteForms.min.js"></script>
-	{/block}
+    <script src="https://nette.github.io/resources/js/3/netteForms.min.js"></script>
+{/block}
 </body>
 </html>
