--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{ifset title}{include title|stripHtml} | {/ifset}Images Gallery</title>
+    <title>{ifset title}{include title|stripHtml} | {/ifset}{$site_name}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
 </head>
 
@@ -12,6 +12,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a class="navbar-item" n:href=":Front:Homepage:default">
+            {$site_name}
         </a>
 
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
