--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar pb-3" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a class="navbar-item" n:href=":Front:Homepage:default">
             {$site_name}
@@ -45,8 +45,13 @@
         {/if}
     </div>
 </nav>
+<div class="container">
+    <div n:foreach="$flashes as $flash" n:class="notification, 'is-'.$flash->type">
+        <button class="delete"></button>
+        {$flash->message}
+    </div>
+</div>
 
-<div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
 
 {include content}
 
