set dart color for navbar

--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<nav class="navbar pb-3" role="navigation" aria-label="main navigation">
+<nav class="navbar mb-3 is-dark" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a class="navbar-item" n:href=":Front:Homepage:default">
             {$site_name}
