fix Sign presenter link in layout

--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -36,7 +36,7 @@
                 </div>
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a n:href="Sign:out" class="button is-light">
+                        <a n:href=":Admin:Sign:out" class="button is-light">
                             Logout
                         </a>
                     </div>
