--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -6,6 +6,7 @@
 
     <title>{ifset title}{include title|stripHtml} | {/ifset}{$site_name}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <link rel="stylesheet" href="{$baseUrl}/css/style.css">
 </head>
 
 <body>
